--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -1,100 +1,93 @@
 @import url(normalize.css);
 
 /* Font families and weight: */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 .borde {
-    outline: 1px solid red;
+  outline: 1px solid red;
 }
 
 /* Variables: */
 $moderate-cyan: hsl(224, 93%, 58%);
 $padding-x: 2.7em;
 
-
 body {
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 10em;
+  display: grid;
+  grid-auto-flow: row;
+  row-gap: 10em;
 
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+
+  padding-right: $padding-x;
+  padding-left: $padding-x;
+  justify-content: center;
+
+  .header {
+    display: grid;
+    grid-template-columns: auto 24em;
+
+    font-family: "Raleway", sans-serif;
     font-weight: 400;
 
-    padding-right: $padding-x;
-    padding-left: $padding-x;
+    width: 100;
+
+    .header__logo {
+      margin-bottom: 0;
+    }
+
+    .header__nav {
+      display: grid;
+      grid-auto-flow: column;
+
+      align-content: end;
+      text-align: center;
+
+      .header__tabs {
+        text-decoration: none;
+        color: inherit;
+      }
+    }
+  }
+
+  .main__section-1 {
+    $row-width: auto;
+
+    display: grid;
+    grid-template-rows: $row-width $row-width $row-width $row-width $row-width;
+    grid-template-columns: 25em auto;
     justify-content: center;
 
-    .header {
-        display: grid;
-        grid-template-columns: auto 24em;
-
-        font-family: 'Raleway', sans-serif;
-        font-weight: 400;
-
-        width: 100;
-
-        .header__logo {
-            margin-bottom: 0;
-        }
-
-        .header__nav {
-            display: grid;
-            grid-auto-flow: column;
-
-            align-content: end;
-            text-align: center;
-
-            .header__tabs {
-                text-decoration: none;
-                color: inherit;
-            }
-        }
+    .section-1__title {
+      grid-area: 2/1 / 3/2;
     }
 
-
-    .main__section-1 {
-        $row-width: auto;
-
-        display: grid;
-        grid-template-rows: $row-width $row-width $row-width $row-width $row-width;
-        grid-template-columns: 25em auto;
-        justify-content: center;
-
-        .section-1__title {
-            grid-area: 2/1 / 3/2;
-
-        }
-
-        .section-1__description {
-            grid-area: 3/1 / 4/2;
-        }
-
-        .section-1__form {
-            grid-area: 4/1 / 5/2;
-
-        }
-
-        .section-1__image {
-            grid-area: 1/2 / 6/3;
-            max-width: 100%;
-            max-height: 100%
-        }
+    .section-1__description {
+      grid-area: 3/1 / 4/2;
     }
+
+    .section-1__form {
+      grid-area: 4/1 / 5/2;
+    }
+
+    .section-1__image {
+      grid-area: 1/2 / 6/3;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
 }
 
-
-.main__section-1>* {
-    /* outline: 2px solid gold; */
+.main__section-1 > * {
+  outline: 2px solid gold;
 }
 
 input[type="button"] {
-    background-color: $moderate-cyan;
-    border-style: none;
-    color: white;
+  background-color: $moderate-cyan;
+  border-style: none;
+  color: white;
 }
-
-
 
 /* .ob {
     color: hsl(238, 22%, 44%);
