--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -22,7 +22,7 @@ body .header {
   grid-template-columns: auto 24em;
   font-family: "Raleway", sans-serif;
   font-weight: 400;
-  width: 100;
+  width: 100%;
 }
 body .header .header__logo {
   margin-bottom: 0;
