--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -31,7 +31,7 @@ body {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 
-    width: 100;
+    width: 100%;
 
     .header__logo {
       margin-bottom: 0;
