--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -38,8 +38,9 @@ body .header .header__nav .header__tabs {
   color: inherit;
 }
 body .main__section-1 {
+  height: 44.14em;
   display: grid;
-  grid-template-rows: auto auto auto auto auto;
+  grid-template-rows: auto 4.69em auto auto auto;
   grid-template-columns: 25em auto;
   justify-content: center;
 }
@@ -56,6 +57,9 @@ body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
   max-width: 100%;
   max-height: 100%;
+}
+body .main__section-1 > * {
+  margin: 0;
 }
 
 /*
