--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -53,9 +53,10 @@ body {
 
   .main__section-1 {
     $row-height: auto;
+    height: 44.14em;
 
     display: grid;
-    grid-template-rows: $row-height $row-height $row-height $row-height $row-height;
+    grid-template-rows: $row-height 4.69em $row-height $row-height $row-height;
     grid-template-columns: 25em auto;
     justify-content: center;
 
@@ -76,6 +77,10 @@ body {
       max-width: 100%;
       max-height: 100%;
     }
+  }
+
+  .main__section-1 > * {
+    margin: 0;
   }
 }
 
