--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -53,7 +53,7 @@ body {
 
   .main__section-1 {
     $row-height: auto;
-    height: 44.14em;
+    /* height: 44.14em; */
 
     display: grid;
     grid-template-rows: $row-height 4.69em $row-height $row-height $row-height;
