--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -62,14 +62,13 @@ body .main__section-1 > * {
   max-height: 100%;
 }
 
-/*
-input[type="button"] {
-  background-color: $moderate-cyan;
+input[type=button] {
+  background-color: hsl(224deg, 93%, 58%);
   border-style: none;
   color: white;
 }
 
- .ob {
+/*  .ob {
     color: hsl(238, 22%, 44%);
     color: hsl(243, 87%, 12%);
     color: hsl(224, 93%, 58%);
@@ -77,9 +76,8 @@ input[type="button"] {
     color: hsl(240, 75%, 98%);
     color: hsl(0, 0%, 75%);
 
-}
-
- .container {
+} */
+/*  .container {
 
     display: grid;
     grid-template-rows: auto auto auto;
@@ -109,12 +107,10 @@ input[type="button"] {
         grid-area: 1/2 / 4/3;
 
     }
-}
-
-.container>* {
+} */
+/* .container>* {
     background-color: gold;
     outline: 2px solid black;
 
-}
-*/
+} */
 /*# sourceMappingURL=style.css.map */
