--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -15,6 +15,7 @@ body {
   font-weight: 400;
   padding-right: 2.7em;
   padding-left: 2.7em;
+  padding-bottom: 1em;
   justify-content: center;
 }
 body .header {
@@ -40,18 +41,18 @@ body .header .header__nav .header__tabs {
 body .main__section-1 {
   /* height: 44.14em; */
   display: grid;
-  grid-template-rows: auto 4.69em auto auto auto;
+  grid-template-rows: auto 0.000001em 4.69em auto auto auto;
   grid-template-columns: 25em auto;
   justify-content: center;
 }
 body .main__section-1 .section-1__title {
-  grid-area: 2/1/3/2;
-}
-body .main__section-1 .section-1__description {
   grid-area: 3/1/4/2;
 }
-body .main__section-1 .section-1__form {
+body .main__section-1 .section-1__description {
   grid-area: 4/1/5/2;
+}
+body .main__section-1 .section-1__form {
+  grid-area: 5/1/6/2;
 }
 body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
@@ -61,8 +62,7 @@ body .main__section-1 > * {
   max-width: 100%;
   max-height: 100%;
 }
-
-input[type=button] {
+body input[type=button] {
   background-color: hsl(224deg, 93%, 58%);
   border-style: none;
   color: white;
