--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -22,6 +22,7 @@ body {
 
   padding-right: $padding-x;
   padding-left: $padding-x;
+  padding-bottom: 1em;
   justify-content: center;
 
   .header {
@@ -56,20 +57,20 @@ body {
     /* height: 44.14em; */
 
     display: grid;
-    grid-template-rows: $row-height 4.69em $row-height $row-height $row-height;
+    grid-template-rows: $row-height 0.000001em 4.69em $row-height $row-height $row-height;
     grid-template-columns: 25em auto;
     justify-content: center;
 
     .section-1__title {
-      grid-area: 2/1 / 3/2;
-    }
-
-    .section-1__description {
       grid-area: 3/1 / 4/2;
     }
 
-    .section-1__form {
+    .section-1__description {
       grid-area: 4/1 / 5/2;
+    }
+
+    .section-1__form {
+      grid-area: 5/1 / 6/2;
     }
 
     .section-1__image {
@@ -82,13 +83,12 @@ body {
     max-width: 100%;
     max-height: 100%;
   }
-}
-
-
-input[type="button"] {
-  background-color: $moderate-cyan;
-  border-style: none;
-  color: white;
+  
+  input[type="button"] {
+    background-color: $moderate-cyan;
+    border-style: none;
+    color: white;
+  }
 }
 
 /*  .ob {
