--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -54,7 +54,7 @@ body {
 
   .main__section-1 {
     $row-height: auto;
-    /* height: 44.14em; */
+    height: 44.14em;
 
     display: grid;
     grid-template-rows: $row-height 0.000001em 4.69em $row-height $row-height $row-height;
@@ -83,7 +83,7 @@ body {
     max-width: 100%;
     max-height: 100%;
   }
-  
+
   input[type="button"] {
     background-color: $moderate-cyan;
     border-style: none;
