--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -7,6 +7,7 @@
 }
 
 /* Variables: */
+/* Mixing */
 body {
   display: grid;
   grid-auto-flow: row;
@@ -39,20 +40,21 @@ body .header .header__nav .header__tabs {
   color: inherit;
 }
 body .main__section-1 {
-  height: 44.14em;
+  /* height: 44.14em; */
   display: grid;
   grid-template-rows: auto 20% 20% 20% auto;
-  grid-template-columns: 25em auto;
+  grid-template-columns: 32em auto;
   justify-content: center;
 }
 body .main__section-1 .section-1__title {
-  grid-area: 3/1/4/2;
+  grid-area: 2/1/3/2;
+  font-size: 2em;
 }
 body .main__section-1 .section-1__description {
-  grid-area: 4/1/5/2;
+  grid-area: 3/1/4/2;
 }
 body .main__section-1 .section-1__form {
-  grid-area: 5/1/6/2;
+  grid-area: 4/1/5/2;
 }
 body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
