--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import url(normalize.css);
 
 /* Font families and weight: */
@@ -11,6 +12,9 @@
 /* Variables: */
 $moderate-cyan: hsl(224, 93%, 58%);
 $padding-x: 2.7em;
+
+/* Mixing */
+
 
 body {
   display: grid;
@@ -53,23 +57,24 @@ body {
   }
 
   .main__section-1 {
-    height: 44.14em;
+    /* height: 44.14em; */
 
     display: grid;
     grid-template-rows: auto 20% 20% 20% auto;
-    grid-template-columns: 25em auto;
+    grid-template-columns: 32em auto;
     justify-content: center;
 
     .section-1__title {
-      grid-area: 3/1 / 4/2;
+      grid-area: 2/1 / 3/2;
+      font-size: math.div(32em, 16);
     }
 
     .section-1__description {
-      grid-area: 4/1 / 5/2;
+      grid-area: 3/1 / 4/2;
     }
 
     .section-1__form {
-      grid-area: 5/1 / 6/2;
+      grid-area: 4/1 / 5/2;
     }
 
     .section-1__image {
