--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -14,7 +14,9 @@ $moderate-cyan: hsl(224, 93%, 58%);
 $padding-x: 2.7em;
 
 /* Mixing */
-
+@mixin font-size($font-size) {
+  font-size: $font-size;
+}
 
 body {
   display: grid;
@@ -57,7 +59,7 @@ body {
   }
 
   .main__section-1 {
-    /* height: 44.14em; */
+    max-height: 44em;
 
     display: grid;
     grid-template-rows: auto 20% 20% 20% auto;
