--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -14,8 +14,8 @@ $moderate-cyan: hsl(224, 93%, 58%);
 $padding-x: 2.7em;
 
 /* Mixing */
-@mixin font-size($font-size) {
-  font-size: $font-size;
+@mixin font($font-size) {
+  font-size: $font-s;
 }
 
 body {
@@ -68,11 +68,12 @@ body {
 
     .section-1__title {
       grid-area: 2/1 / 3/2;
-      font-size: math.div(32em, 16);
+      @include font(math.div(32em, 16));
     }
 
     .section-1__description {
       grid-area: 3/1 / 4/2;
+      @include font(math.div(20em, 16));
     }
 
     .section-1__form {
