--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -43,7 +43,7 @@ body .main__section-1 {
   max-height: 44em;
   display: grid;
   grid-template-rows: auto 20% 20% 20% auto;
-  grid-template-columns: 32em auto;
+  grid-template-columns: 40% auto;
   justify-content: center;
 }
 body .main__section-1 .section-1__title {
@@ -52,6 +52,7 @@ body .main__section-1 .section-1__title {
 }
 body .main__section-1 .section-1__description {
   grid-area: 3/1/4/2;
+  font-size: 1.25em;
 }
 body .main__section-1 .section-1__form {
   grid-area: 4/1/5/2;
