--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -43,9 +43,9 @@ body .header .header__nav .header__tabs {
 body .main__section-1 {
   max-height: 44em;
   display: grid;
-  grid-template-rows: auto -webkit-min-content -webkit-min-content -webkit-min-content auto;
-  grid-template-rows: auto min-content min-content min-content auto;
-  grid-template-columns: auto auto;
+  grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content;
+  grid-template-rows: max-content max-content max-content max-content max-content;
+  grid-template-columns: 60% auto;
   justify-content: center;
 }
 body .main__section-1 .section-1__title {
@@ -64,8 +64,6 @@ body .main__section-1 .section-1__image {
 }
 body .main__section-1 > * {
   margin: 0;
-  max-width: 100%;
-  max-height: 100%;
 }
 body input[type=button] {
   background-color: hsl(224deg, 93%, 58%);
