--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -43,9 +43,9 @@ body .header .header__nav .header__tabs {
 body .main__section-1 {
   max-height: 44em;
   display: grid;
-  grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content;
-  grid-template-rows: max-content max-content max-content max-content max-content;
-  grid-template-columns: 60% auto;
+  grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content;
+  grid-template-rows: min-content min-content min-content min-content min-content;
+  grid-template-columns: 40% auto;
   justify-content: center;
 }
 body .main__section-1 .section-1__title {
