--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -41,12 +41,15 @@ body .header .header__nav .header__tabs {
   color: inherit;
 }
 body .main__section-1 {
-  max-height: 44em;
+  /* $max-h: 44em; */
+  /* max-height: $max-h; */
   display: grid;
   grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content min-content min-content min-content;
-  grid-template-columns: 40% auto;
+  grid-template-columns: 30% auto;
   justify-content: center;
+  /*     .section-1__image > * {
+      } */
 }
 body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
