--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -41,15 +41,15 @@ body .header .header__nav .header__tabs {
   color: inherit;
 }
 body .main__section-1 {
-  /* $max-h: 44em; */
-  /* max-height: $max-h; */
+  max-height: 37.5975em;
   display: grid;
   grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content -webkit-min-content;
   grid-template-rows: min-content min-content min-content min-content min-content;
-  grid-template-columns: 30% auto;
+  grid-template-columns: 40% auto;
   justify-content: center;
+  max-width: 100%;
   /*     .section-1__image > * {
-      } */
+  } */
 }
 body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
@@ -64,6 +64,8 @@ body .main__section-1 .section-1__form {
 }
 body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
+  max-width: 100%;
+  max-height: 100%;
 }
 body .main__section-1 > * {
   margin: 0;
