--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -66,10 +66,11 @@ body {
     max-height: $max-h;
 
     display: grid;
-    grid-template-rows: $row-h $row-h $row-h $row-h $row-h;
+    grid-template-rows: auto $row-h $row-h $row-h auto;
     grid-template-columns: 40% auto;
     justify-content: center;
     max-width: 100%;
+    
     .section-1__title {
       grid-area: 2/1 / 3/2;
       @include font(math.div(32em, 16));
