--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -70,10 +70,12 @@ body {
     grid-template-columns: 40% auto;
     justify-content: center;
     max-width: 100%;
-    
+
     .section-1__title {
       grid-area: 2/1 / 3/2;
       @include font(math.div(32em, 16));
+
+      padding-bottom: 1em;
     }
 
     .section-1__description {
