--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -79,12 +79,13 @@ body {
       grid-area: 2/1 / 3/2;
       @include font(math.div(32em, 16));
 
-      padding-bottom: 1em;
+      @include pb(1em);
     }
 
     .section-1__description {
       grid-area: 3/1 / 4/2;
       @include font(math.div(22em, 16));
+      @include pb(1em);
     }
 
     .section-1__form {
