--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -40,6 +40,9 @@ body .header .header__nav .header__tabs {
   text-decoration: none;
   color: inherit;
 }
+body .main__section-1 > * {
+  margin: 0;
+}
 body .main__section-1 {
   max-height: 37.5975em;
   display: grid;
@@ -48,8 +51,6 @@ body .main__section-1 {
   grid-template-columns: 40% auto;
   justify-content: center;
   max-width: 100%;
-  /*     .section-1__image > * {
-  } */
 }
 body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
@@ -63,14 +64,17 @@ body .main__section-1 .section-1__description {
 }
 body .main__section-1 .section-1__form {
   grid-area: 4/1/5/2;
+  display: grid;
+  grid-auto-flow: column;
+  -moz-column-gap: 2em;
+       column-gap: 2em;
+  padding-right: 1em;
+  height: 2.7em;
 }
 body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
   max-width: 100%;
   max-height: 100%;
-}
-body .main__section-1 > * {
-  margin: 0;
 }
 body input[type=button] {
   background-color: hsl(224deg, 93%, 58%);
