--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -63,6 +63,10 @@ body {
     }
   }
 
+  .main__section-1 > * {
+    margin: 0;
+  }
+
   .main__section-1 {
     $max-h: math.div(601.56em, 16);
     $row-h: min-content;
@@ -90,6 +94,13 @@ body {
 
     .section-1__form {
       grid-area: 4/1 / 5/2;
+
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 2em;
+
+      padding-right: 1em;
+      height: 2.7em;
     }
 
     .section-1__image {
@@ -97,13 +108,6 @@ body {
       max-width: 100%;
       max-height: 100%;
     }
-
-    /*     .section-1__image > * {
-    } */
-  }
-
-  .main__section-1 > * {
-    margin: 0;
   }
 
   input[type="button"] {
