--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -12,7 +12,7 @@ body {
   display: grid;
   grid-auto-flow: row;
   row-gap: 10em;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   padding-right: 2.7em;
