--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -7,7 +7,7 @@
 }
 
 /* Variables: */
-/* Mixing */
+/* Mixings */
 body {
   display: grid;
   grid-auto-flow: row;
@@ -57,6 +57,7 @@ body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
   font-size: 2em;
   padding-bottom: 1em;
+  max-height: 6.599375em;
 }
 body .main__section-1 .section-1__description {
   grid-area: 3/1/4/2;
