--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -45,7 +45,7 @@ body .main__section-1 > * {
 }
 body .main__section-1 {
   max-height: 37.5975em;
-  min-width: 6.25em;
+  min-width: 84.601875em;
   display: grid;
   grid-template-rows: auto -webkit-min-content -webkit-min-content -webkit-min-content auto;
   grid-template-rows: auto min-content min-content min-content auto;
@@ -93,40 +93,29 @@ body input[type=button] {
     color: hsl(0, 0%, 75%);
 
 } */
-/*  .container {
+.container {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: auto auto;
+  height: 400px;
+  margin-top: 200px;
+  background-color: green;
+}
+.container .caja-1 {
+  grid-area: 1/1/2/2;
+}
+.container .caja-2 {
+  grid-area: 2/1/3/2;
+}
+.container .caja-3 {
+  grid-area: 3/1/4/2;
+}
+.container .caja-4 {
+  grid-area: 1/2/4/3;
+}
 
-    display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto;
-    height: 400px;
-    margin-top: 200px;
-    background-color: green;
-
-
-    .caja-1 {
-        grid-area: 1/1 / 2/2;
-
-    }
-
-    .caja-2 {
-        grid-area: 2/1 / 3/2;
-
-    }
-
-    .caja-3 {
-        grid-area: 3/1 / 4/2;
-
-
-    }
-
-    .caja-4 {
-        grid-area: 1/2 / 4/3;
-
-    }
-} */
-/* .container>* {
-    background-color: gold;
-    outline: 2px solid black;
-
-} */
+.container > * {
+  background-color: gold;
+  outline: 2px solid black;
+}
 /*# sourceMappingURL=style.css.map */
