--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -45,7 +45,6 @@ body .main__section-1 > * {
 }
 body .main__section-1 {
   max-height: 37.5975em;
-  min-width: 84.601875em;
   display: grid;
   grid-template-rows: auto -webkit-min-content -webkit-min-content -webkit-min-content auto;
   grid-template-rows: auto min-content min-content min-content auto;
@@ -57,7 +56,7 @@ body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
   font-size: 2em;
   padding-bottom: 1em;
-  max-height: 6.599375em;
+  /* @include mh(math.div(105.59em, 16)); */
 }
 body .main__section-1 .section-1__description {
   grid-area: 3/1/4/2;
