--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -46,8 +46,8 @@ body .main__section-1 > * {
 body .main__section-1 {
   max-height: 37.5975em;
   display: grid;
-  grid-template-rows: auto -webkit-min-content -webkit-min-content -webkit-min-content auto;
-  grid-template-rows: auto min-content min-content min-content auto;
+  grid-template-rows: auto repeat(3, -webkit-min-content) auto;
+  grid-template-rows: auto repeat(3, min-content) auto;
   grid-template-columns: 40% auto;
   justify-content: center;
   max-width: 100%;
@@ -70,6 +70,7 @@ body .main__section-1 .section-1__form {
   -moz-column-gap: 2em;
        column-gap: 2em;
   padding-right: 1em;
+  padding-left: 0.3em;
   height: 2.7em;
 }
 body .main__section-1 .section-1__image {
