--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -52,6 +52,17 @@ body .main__section-1 {
   justify-content: center;
   max-width: 100%;
 }
+@media only screen and (max-width: 945px) {
+  body .main__section-1 .main__section-1 {
+    /*         $max-h: math.div(601.56em, 16);
+    max-height: $max-h; */
+    display: grid;
+    grid-template-rows: auto repeat(3, -webkit-min-content);
+    grid-template-rows: auto repeat(3, min-content);
+    grid-template-columns: auto;
+    justify-content: center;
+  }
+}
 body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
   font-size: 2em;
@@ -93,29 +104,32 @@ body input[type=button] {
     color: hsl(0, 0%, 75%);
 
 } */
-.container {
+/* .container {
   display: grid;
   grid-template-rows: auto auto auto;
   grid-template-columns: auto auto;
   height: 400px;
   margin-top: 200px;
   background-color: green;
-}
-.container .caja-1 {
-  grid-area: 1/1/2/2;
-}
-.container .caja-2 {
-  grid-area: 2/1/3/2;
-}
-.container .caja-3 {
-  grid-area: 3/1/4/2;
-}
-.container .caja-4 {
-  grid-area: 1/2/4/3;
-}
 
-.container > * {
+  .caja-1 {
+    grid-area: 1/1 / 2/2;
+  }
+
+  .caja-2 {
+    grid-area: 2/1 / 3/2;
+  }
+
+  .caja-3 {
+    grid-area: 3/1 / 4/2;
+  }
+
+  .caja-4 {
+    grid-area: 1/2 / 4/3;
+  }
+} */
+/* .container > * {
   background-color: gold;
   outline: 2px solid black;
-}
+} */
 /*# sourceMappingURL=style.css.map */
