--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -73,13 +73,25 @@ body {
 
   .main__section-1 {
     $max-h: math.div(601.56em, 16);
-      max-height: $max-h;
+    max-height: $max-h;
 
     display: grid;
     grid-template-rows: auto repeat(3, min-content) auto;
     grid-template-columns: 40% auto;
     justify-content: center;
     max-width: 100%;
+
+    @media only screen and (max-width: 945px) {
+      .main__section-1 {
+        /*         $max-h: math.div(601.56em, 16);
+        max-height: $max-h; */
+
+        display: grid;
+        grid-template-rows: auto repeat(3, min-content);
+        grid-template-columns: auto;
+        justify-content: center;
+      }
+    }
 
     .section-1__title {
       grid-area: 2/1 / 3/2;
@@ -131,7 +143,7 @@ body {
     
 } */
 
-.container {
+/* .container {
   display: grid;
   grid-template-rows: auto auto auto;
   grid-template-columns: auto auto;
@@ -154,9 +166,9 @@ body {
   .caja-4 {
     grid-area: 1/2 / 4/3;
   }
-}
+} */
 
-.container > * {
+/* .container > * {
   background-color: gold;
   outline: 2px solid black;
-}
+} */
