--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -52,45 +52,10 @@ body .main__section-1 {
   justify-content: center;
   max-width: 100%;
 }
-@media only screen and (max-width: 945px) {
-  body .main__section-1 .main__section-1 {
-    display: grid;
-    grid-template-rows: auto repeat(3, -webkit-min-content);
-    grid-template-rows: auto repeat(3, min-content);
-    justify-content: center;
-  }
-  body .main__section-1 .section-1__title {
-    grid-area: 2/1/3/2;
-    font-size: 2em;
-    padding-bottom: 1em;
-    /* @include mh(math.div(105.59em, 16)); */
-  }
-  body .main__section-1 .section-1__description {
-    grid-area: 3/1/4/2;
-    font-size: 1.375em;
-    padding-bottom: 1em;
-  }
-  body .main__section-1 .section-1__form {
-    grid-area: 4/1/5/2;
-    display: grid;
-    grid-auto-flow: column;
-    -moz-column-gap: 2em;
-         column-gap: 2em;
-    padding-right: 1em;
-    padding-left: 0.3em;
-    height: 2.7em;
-  }
-  body .main__section-1 .section-1__image {
-    grid-area: 1/2/6/3;
-    max-width: 100%;
-    max-height: 100%;
-  }
-}
 body .section-1__title {
   grid-area: 2/1/3/2;
   font-size: 2em;
   padding-bottom: 1em;
-  /* @include mh(math.div(105.59em, 16)); */
 }
 body .section-1__description {
   grid-area: 3/1/4/2;
@@ -111,6 +76,34 @@ body .section-1__image {
   grid-area: 1/2/6/3;
   max-width: 100%;
   max-height: 100%;
+}
+@media only screen and (max-width: 915px) {
+  body .main__section-1 {
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+  }
+  body .main__section-1 .section-1__image {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  body .main__section-1 .section-1__title {
+    font-size: 2em;
+    padding-bottom: 1em;
+  }
+  body .main__section-1 .section-1__description {
+    font-size: 1.375em;
+    padding-bottom: 1em;
+  }
+  body .main__section-1 .section-1__form {
+    display: grid;
+    grid-auto-flow: column;
+    -moz-column-gap: 2em;
+         column-gap: 2em;
+    padding-right: 1em;
+    padding-left: 0.3em;
+    height: 2.7em;
+  }
 }
 
 input[type=button] {
