--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -80,54 +80,12 @@ body {
     grid-template-columns: 40% auto;
     justify-content: center;
     max-width: 100%;
-
-    @media only screen and (max-width: 945px) {
-      .main__section-1 {
-        display: grid;
-        grid-template-rows: auto repeat(3, min-content);
-        justify-content: center;
-      }
-
-      .section-1__title {
-        grid-area: 2/1 / 3/2;
-        @include font(math.div(32em, 16));
-
-        @include pb(1em);
-        /* @include mh(math.div(105.59em, 16)); */
-      }
-
-      .section-1__description {
-        grid-area: 3/1 / 4/2;
-        @include font(math.div(22em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__form {
-        grid-area: 4/1 / 5/2;
-
-        display: grid;
-        grid-auto-flow: column;
-        column-gap: 2em;
-
-        padding-right: 1em;
-        padding-left: 0.3em;
-        height: 2.7em;
-      }
-
-      .section-1__image {
-        grid-area: 1/2 / 6/3;
-        max-width: 100%;
-        max-height: 100%;
-      }
-    }
   }
 
   .section-1__title {
     grid-area: 2/1 / 3/2;
     @include font(math.div(32em, 16));
-
     @include pb(1em);
-    /* @include mh(math.div(105.59em, 16)); */
   }
 
   .section-1__description {
@@ -152,6 +110,39 @@ body {
     grid-area: 1/2 / 6/3;
     max-width: 100%;
     max-height: 100%;
+  }
+
+  @media only screen and (max-width: 915px) {
+    .main__section-1 {
+      display: grid;
+      grid-auto-flow: row;
+      justify-content: center;
+      
+      .section-1__image {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .section-1__title {
+        @include font(math.div(32em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__description {
+        @include font(math.div(22em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__form {
+        display: grid;
+        grid-auto-flow: column;
+        column-gap: 2em;
+
+        padding-right: 1em;
+        padding-left: 0.3em;
+        height: 2.7em;
+      }
+    }
   }
 }
 
