--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -106,6 +106,11 @@ body .section-1__image {
   }
 }
 
+@media only screen and (min-width: 915px) {
+  body {
+    background-color: green;
+  }
+}
 input[type=button] {
   background-color: hsl(224deg, 93%, 58%);
   border-style: none;
@@ -148,5 +153,10 @@ input[type=button] {
 /* .container > * {
   background-color: gold;
   outline: 2px solid black;
+} */
+/* @media only screen and (max-width: 915px) {
+  body{
+    background-color: green;
+  }
 } */
 /*# sourceMappingURL=style.css.map */
