--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -117,7 +117,7 @@ body {
       display: grid;
       grid-auto-flow: row;
       justify-content: center;
-      
+
       .section-1__image {
         max-width: 100%;
         max-height: 100%;
@@ -143,6 +143,12 @@ body {
         height: 2.7em;
       }
     }
+  }
+}
+
+@media only screen and (min-width: 915px) {
+  body {
+    background-color: green;
   }
 }
 
@@ -190,4 +196,10 @@ input[type="button"] {
 /* .container > * {
   background-color: gold;
   outline: 2px solid black;
+} */
+
+/* @media only screen and (max-width: 915px) {
+  body{
+    background-color: green;
+  }
 } */
