--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -52,17 +52,17 @@ body .main__section-1 {
   justify-content: center;
   max-width: 100%;
 }
-body .section-1__title {
+body .main__section-1 .section-1__title {
   grid-area: 2/1/3/2;
   font-size: 2em;
   padding-bottom: 1em;
 }
-body .section-1__description {
+body .main__section-1 .section-1__description {
   grid-area: 3/1/4/2;
   font-size: 1.375em;
   padding-bottom: 1em;
 }
-body .section-1__form {
+body .main__section-1 .section-1__form {
   grid-area: 4/1/5/2;
   display: grid;
   grid-auto-flow: column;
@@ -72,7 +72,7 @@ body .section-1__form {
   padding-left: 0.3em;
   height: 2.7em;
 }
-body .section-1__image {
+body .main__section-1 .section-1__image {
   grid-area: 1/2/6/3;
   max-width: 100%;
   max-height: 100%;
