--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -71,44 +71,46 @@ body {
     margin: 0;
   }
 
-  .main__section-1 {
-    $max-h: math.div(601.56em, 16);
-    max-height: $max-h;
-
-    display: grid;
-    grid-template-rows: auto repeat(3, min-content) auto;
-    grid-template-columns: 40% auto;
-    justify-content: center;
-    max-width: 100%;
-
-    .section-1__title {
-      grid-area: 2/1 / 3/2;
-      @include font(math.div(32em, 16));
-      @include pb(1em);
-    }
-
-    .section-1__description {
-      grid-area: 3/1 / 4/2;
-      @include font(math.div(22em, 16));
-      @include pb(1em);
-    }
-
-    .section-1__form {
-      grid-area: 4/1 / 5/2;
+  @media only screen and (min-width: 916px) {
+    .main__section-1 {
+      $max-h: math.div(601.56em, 16);
+      max-height: $max-h;
 
       display: grid;
-      grid-auto-flow: column;
-      column-gap: 2em;
-
-      padding-right: 1em;
-      padding-left: 0.3em;
-      height: 2.7em;
-    }
-
-    .section-1__image {
-      grid-area: 1/2 / 6/3;
+      grid-template-rows: auto repeat(3, min-content) auto;
+      grid-template-columns: 40% auto;
+      justify-content: center;
       max-width: 100%;
-      max-height: 100%;
+
+      .section-1__title {
+        grid-area: 2/1 / 3/2;
+        @include font(math.div(32em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__description {
+        grid-area: 3/1 / 4/2;
+        @include font(math.div(22em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__form {
+        grid-area: 4/1 / 5/2;
+
+        display: grid;
+        grid-auto-flow: column;
+        column-gap: 2em;
+
+        padding-right: 1em;
+        padding-left: 0.3em;
+        height: 2.7em;
+      }
+
+      .section-1__image {
+        grid-area: 1/2 / 6/3;
+        max-width: 100%;
+        max-height: 100%;
+      }
     }
   }
 
