--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -71,6 +71,37 @@ body {
     margin: 0;
   }
 
+  @media only screen and (max-width: 915px) {
+    .main__section-1 {
+      display: grid;
+      grid-auto-flow: row;
+      justify-content: center;
+
+      .section-1__image {
+        order: -1;
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .section-1__title {
+        @include font(math.div(32em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__description {
+        @include font(math.div(22em, 16));
+        @include pb(1em);
+      }
+
+      .section-1__form {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 4em;
+        height: 6em;
+      }
+    }
+  }
+
   @media only screen and (min-width: 916px) {
     .main__section-1 {
       $max-h: math.div(601.56em, 16);
@@ -103,46 +134,13 @@ body {
 
         padding-right: 1em;
         padding-left: 0.3em;
-        height: 2.7em;
+        height: 7em;
       }
 
       .section-1__image {
         grid-area: 1/2 / 6/3;
         max-width: 100%;
         max-height: 100%;
-      }
-    }
-  }
-
-  @media only screen and (max-width: 915px) {
-    .main__section-1 {
-      display: grid;
-      grid-auto-flow: row;
-      justify-content: center;
-
-      .section-1__image {
-        max-width: 100%;
-        max-height: 100%;
-      }
-
-      .section-1__title {
-        @include font(math.div(32em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__description {
-        @include font(math.div(22em, 16));
-        @include pb(1em);
-      }
-
-      .section-1__form {
-        display: grid;
-        grid-auto-flow: column;
-        column-gap: 2em;
-
-        padding-right: 1em;
-        padding-left: 0.3em;
-        height: 2.7em;
       }
     }
   }
