--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -11,7 +11,6 @@
 
 /* Variables: */
 $moderate-cyan: hsl(224, 93%, 58%);
-$padding-x: 2.7em;
 
 /* Mixings */
 @mixin font($font-s) {
@@ -30,26 +29,28 @@ body {
   display: grid;
   grid-auto-flow: row;
   row-gap: 10em;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: repeat(3, auto);
 
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
 
-  padding-right: $padding-x;
-  padding-left: $padding-x;
+  padding-right: 5vw;
+  padding-left: 5vw;
   padding-bottom: 1em;
   justify-content: center;
 
   .header {
     display: grid;
-    grid-auto-flow: column;
+    grid-template-columns: repeat(2, min-content);
 
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 
+    justify-content: space-between;
+    width: 90vw;
+
     .header__logo {
-      margin-bottom: 0;
-      padding-top: 1em;
+      margin-top: 1em;
     }
 
     .header__nav {
@@ -58,6 +59,8 @@ body {
 
       align-content: end;
       text-align: center;
+
+      width: 200px;
 
       .header__tabs {
         text-decoration: none;
