--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -60,7 +60,7 @@ body {
       align-content: end;
       text-align: center;
 
-      width: 200px;
+      width: 20vw;
 
       .header__tabs {
         text-decoration: none;
