--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -59,13 +59,11 @@ body {
 
     .header__nav {
       display: grid;
-      grid-auto-flow: column;
+      grid-template-columns: repeat(3, auto);
+      column-gap: 1em;
 
       align-content: end;
       text-align: center;
-
-      width: 20vw;
-      max-width: 80%;
 
       .header__tabs {
         text-decoration: none;
