--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -55,15 +55,17 @@ body {
 
     .header__logo {
       margin-top: 1em;
+      width: 90%;
     }
 
     .header__nav {
       display: grid;
       grid-template-columns: repeat(3, auto);
-      column-gap: 1em;
-
+      
       align-content: end;
       text-align: center;
+
+      width: 110%;
 
       .header__tabs {
         text-decoration: none;
