--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -45,16 +45,15 @@ body {
 
   .header {
     display: grid;
-    grid-template-columns: repeat(2, min-content);
+    grid-template-columns: 10% min-content;
 
     font-family: "Raleway", sans-serif;
     font-weight: 400;
 
     justify-content: space-between;
-    
+
     .header__logo {
       margin-top: 1em;
-    
     }
 
     .header__nav {
