--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -156,10 +156,12 @@ body {
     .main__section-2 {
       display: grid;
       grid-template-areas:
-        "t t . i"
-        "d d . i"
-        "l l . i"
-        "c . . i";
+        "t t t i i"
+        "d d . i i"
+        "l . . i i"
+        "c . . i i";
+      grid-template-rows: repeat(4, auto);
+      grid-template-columns: repeat(5, auto);
 
       .section-2__title {
         grid-area: t;
@@ -175,7 +177,18 @@ body {
       }
       .section-2__image {
         grid-area: i;
+        max-width: 100%;
+        max-height: 100%;
       }
+    }
+  }
+
+  .div {
+    width: 30vw;
+
+    .img {
+      outline: 1px solid red;
+      max-width: 100%;
     }
   }
 
