--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -156,12 +156,12 @@ body {
     .main__section-2 {
       display: grid;
       grid-template-areas:
-        "t t t i i"
-        "d d . i i"
-        "l . . i i"
-        "c . . i i";
+        "t t t t i i i i"
+        "d d d . i i i i"
+        "l . . . i i i i"
+        "c c . . i i i i";
       grid-template-rows: repeat(4, auto);
-      grid-template-columns: repeat(5, auto);
+      grid-template-columns: repeat(8, auto) /* repeat(2, math.div(100%, 4)) */;
 
       .section-2__title {
         grid-area: t;
@@ -184,11 +184,11 @@ body {
   }
 
   .div {
-    width: 30vw;
+    width: 80%;
 
     .img {
       outline: 1px solid red;
-      max-width: 100%;
+      width: 90%;
     }
   }
 
