--- a/Sass-grid/proyecto/styles/style.css
+++ b/Sass-grid/proyecto/styles/style.css
@@ -116,17 +116,22 @@ body .main .main__section-1 > * {
     max-height: 100%;
   }
 }
+body .main .main__section-2 > * {
+  margin: 0;
+}
 body .main .main__section-2 {
   display: grid;
-  grid-template-areas: "t t t t t . i i" "d d d . . . i i" "l . . . . . i i" "c c . . . . i i";
-  grid-template-rows: repeat(4, auto);
-  grid-template-columns: repeat(6, auto) repeat(2, 25%);
+  grid-template-areas: "t t t t i i i i" "d d d . i i i i" "l . . . i i i i" "c c . . i i i i" "c c . . i i i i";
+  grid-template-rows: repeat(5, auto);
+  grid-template-columns: repeat(8, 12.5%);
 }
 body .main .main__section-2 .section-2__title {
   grid-area: t;
+  font-size: 2.25em;
 }
 body .main .main__section-2 .section-2__description {
   grid-area: d;
+  font-size: 1.375em;
 }
 body .main .main__section-2 .section-2__link {
   grid-area: l;
