--- a/Sass-grid/proyecto/styles/style.scss
+++ b/Sass-grid/proyecto/styles/style.scss
@@ -15,10 +15,12 @@
 
 /* Variables: */
 $moderate-cyan: hsl(224, 93%, 58%);
+$title-size: math.div(32em, 16);
+$description-size: math.div(22em, 16);
 
 /* Mixings */
 @mixin font($font-s) {
-  font-size: $font-s;
+  font-size: math.div($font-s, 16);
 }
 
 @mixin pb($padding-b) {
@@ -93,12 +95,12 @@ body {
         }
 
         .section-1__title {
-          @include font(math.div(32em, 16));
+          @include font(32em);
           @include pb(1em);
         }
 
         .section-1__description {
-          @include font(math.div(22em, 16));
+          @include font(22em);
           @include pb(1em);
         }
 
@@ -123,13 +125,13 @@ body {
 
         .section-1__title {
           grid-area: 2/1 / 3/2;
-          @include font(math.div(32em, 16));
+          font-size: $title-size;
           @include pb(1em);
         }
 
         .section-1__description {
           grid-area: 3/1 / 4/2;
-          @include font(math.div(22em, 16));
+          font-size: $description-size;
           @include pb(1em);
         }
 
@@ -153,21 +155,31 @@ body {
       }
     }
 
+    .main__section-2 > * {
+      margin: 0;
+    }
     .main__section-2 {
       display: grid;
       grid-template-areas:
-        "t t t t t . i i"
-        "d d d . . . i i"
-        "l . . . . . i i"
-        "c c . . . . i i";
-      grid-template-rows: repeat(4, auto);
-      grid-template-columns: repeat(6, auto) repeat(2, math.div(100%, 4));
+        "t t t t i i i i"
+        "d d d . i i i i"
+        "l . . . i i i i"
+        "c c . . i i i i"
+        "c c . . i i i i";
+
+      grid-template-rows: repeat(5, auto);
+
+      $col-n: 8;
+      $col-w: math.div(100%, $col-n);
+      grid-template-columns: repeat($col-n, $col-w);
 
       .section-2__title {
         grid-area: t;
+        @include font(36em);
       }
       .section-2__description {
         grid-area: d;
+        font-size: $description-size;
       }
       .section-2__link {
         grid-area: l;
